tools/tests/errors/surf_cont_13.ki
# popitem on an empty Dict
var d = {}
discard d.popitem()
